--- a/LagerHantering/AngularApp/Views/article.html
+++ b/LagerHantering/AngularApp/Views/article.html
@@ -9,7 +9,7 @@
        Artiklar:
 
        <hr />
-       Artikelnamn: <input type="text" class="form-control" data-ng-model="article.name" />
+       Artikelnamn: <input type="text" class="form-control" data-ng-model="article.Name" />
         <select ng-model="selectedOption" ng-options="v.name for v in components "></select>
         <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="saveComponent()">Spara komponent i lista</button> 
         <table>
