--- a/LagerHantering/AngularApp/Views/component.html
+++ b/LagerHantering/AngularApp/Views/component.html
@@ -34,6 +34,7 @@
                             <td>{{component.amount}}</td>
                             <td>{{component.price}}
                                 <button class="glyphicon glyphicon-trash" type="submit" ng-click="deleteComponent($index)"></button>
+                                <a class="glyphicon glyphicon-edit" ng-href="#/componentEdit/{{component.id}}"></a>
                             </td>                                       
                         </tr>
                     </tbody>
