Nu börjar CSS arbetet

--- a/LagerHantering/AngularApp/Views/editComponent.html
+++ b/LagerHantering/AngularApp/Views/editComponent.html
@@ -31,7 +31,7 @@
                 </tr>
             </tbody>
         </table>
-        <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="addComponentAmount()">Lägg tills</button>
+        <button class="glyphicon glyphicon-plus" type="submit" data-ng-click="addComponentAmount()"></button>
     </div>
     <a href="#/component">Tillbaka</a>
 </body>
