--- a/LagerHantering/AngularApp/Views/statistik.html
+++ b/LagerHantering/AngularApp/Views/statistik.html
@@ -5,8 +5,40 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-
-
+    <div id="statistic1" ng-controller="statisticController" ng-init="getAllOrders()">
+        <h1>Utleveranser</h1>
+        <table border="1">
+            <tr>
+                <th>Artikel</th>
+                <th>Antal </th>
+                <th>Datum </th>
+                <th>Användare </th>
+            </tr>
+            <tr ng-repeat="order in orders">
+                <td>{{order.article}}</td>
+                <td>{{order.amount}}</td>
+                <td>{{order.date}}</td>
+                <td>{{order.user}}</td>
+            </tr>
+        </table>
+        </div>
+    <div id="statistic2" ng-controller="statisticController" ng-init="getAllReceipts()">
+        <h2>Inleveranser</h2>
+        <table border="1">
+            <tr>
+                <th>Komponent</th>
+                <th>Antal </th>
+                <th>Datum </th>
+                <th>Användare </th>
+            </tr>
+            <tr ng-repeat="receipt in receipts">
+                <td>{{receipt.component}}</td>
+                <td>{{receipt.amount}}</td>
+                <td>{{receipt.date}}</td>
+                <td>{{receipt.user}}</td>
+            </tr>
+        </table>
+        </div>
 
 </body>
 </html>
