--- a/LagerHantering/AngularApp/Views/articleOutBound.html
+++ b/LagerHantering/AngularApp/Views/articleOutBound.html
@@ -6,18 +6,8 @@
 </head>
 <body>
 
-    <div id="controllerDiv" ng-controller="componentController" ng-init="getallArticles()">
-
-        Artiklar:
-        <table>
-            <tr ng-repeat="article in articles">
-                <td hidden="hidden">{{article.id}}</td>
-                <td>{{article.name}}</td>        
-            </tr>
-        </table>
-        <br />
-        Utleverans
-
+    <div id="controllerDiv" ng-controller="articleOutBoundController" ng-init="getallArticles()">
+        <h1>Utleverans</h1>
         <select name="article" class="col-lg-10" ng-model="articleOutBound.id"
                 ng-options="v.articleId as v.name for v in articles">
 
