--- a/LagerHantering/AngularApp/Views/article.html
+++ b/LagerHantering/AngularApp/Views/article.html
@@ -7,8 +7,13 @@
 <body>
    <div ng-controller="articleController" ng-init="getAllComponents()">
        Artikelnamn: <input type="text" class="form-control" data-ng-model="article.Name" />
-        <select ng-model="selectedOption" ng-options="v.name for v in components "></select>
-        <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="saveComponent()">Spara komponent i lista</button> 
+
+       <h1>Välj komponenter till artikeln</h1>
+
+        <select class="form-control" ng-model="selectedOption" ng-options="v.name for v in components ">
+           
+        </select>      
+        <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="saveComponent()">Lägg till komponent i lista</button> 
         <table>
             <thead>
                 <tr>
@@ -24,23 +29,22 @@
                 </tr>
             </tbody>
         </table>
-        <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="saveArticle()">Spara artikel</button>
+        <button class="btn btn-lg btn-info btn-block" type="submit" ng-click="saveArticle()">Spara artikel</button>
+       <div ng-init="getAllArticles()">
+           <br />
+           <hr />
+           <h2>Artiklar</h2>
+           <table>
+               <tr ng-repeat="article in articles">
+                   <td hidden="hidden">{{article.articleId}}</td>
+                   <td>
+                       {{article.name}}
+                       <a class="glyphicon glyphicon-edit" ng-href="#/articleEdit/{{article.articleId}}"></a>
+                   </td>
+               </tr>
+           </table>
+           <br />
+       </div>
     </div>
-
- <div ng-controller="articleController" ng-init="getAllArticles()">
-          <br />
-          <hr />
-          <h2>Artiklar</h2>
-          <table>
-              <tr ng-repeat="article in articles">
-                  <td hidden="hidden">{{article.articleId}}</td>
-                  <td>{{article.name}}
-                      <a class="glyphicon glyphicon-edit" ng-href="#/articleEdit/{{article.articleId}}"></a>
-                  </td>
-              </tr>
-          </table>
-          <br />
-      </div>
-
 </body>
 </html>
