--- a/LagerHantering/AngularApp/Views/editComponent.html
+++ b/LagerHantering/AngularApp/Views/editComponent.html
@@ -8,28 +8,29 @@
     <div ng-controller="editComponentController" ng-init="editComponent()">
         <table>
             <thead>
-                <tr>
-                    <th>Artikelnummer</th>
-                    <th>Namn</th>
-                    <th>Ledtid</th>
-                    <th>Antal</th>
-                    <th>Pris</th>
-                    <th>Inmatning</th>
-                </tr>
+            <tr>
+                <th>Artikelnummer</th>
+                <th>Namn</th>
+                <th>Ledtid</th>
+                <th>Antal</th>
+                <th>Pris</th>
+                <th>Inmatning</th>
+            </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td hidden="hidden">{{component.id}}</td>
-                    <td>{{component.articleNumber}}</td>
-                    <td>{{component.name}}</td>
-                    <td>{{component.orderTime}}</td>
-                    <td>{{component.amount}}</td>
-                    <td>{{component.price}} </td>
+            <tr>
+                <td hidden="hidden">{{component.id}}</td>
+                <td>{{component.articleNumber}}</td>
+                <td>{{component.name}}</td>
+                <td>{{component.orderTime}}</td>
+                <td>{{component.amount}}</td>
+                <td>{{component.price}} </td>
                     
-                    <td><input type="number" ng-model="Update.amount" /></td>
-                </tr>
+                <td><input type="number" ng-model="Update.amount" /></td>
+            </tr>
             </tbody>
         </table>
+        angular.module('PopupDemo', ['ui.bootstrap']); 
         <button class="glyphicon glyphicon-upload" type="submit" ng-click="updateInvFunction()">Korrigera Lagersaldo</button>
         <button class="btn btn-lg btn-info btn-block" type="submit" ng-click="addComponentAmount()">Lägg tills</button>
     </div>
