--- a/LagerHantering/AngularApp/Views/article.html
+++ b/LagerHantering/AngularApp/Views/article.html
@@ -12,7 +12,8 @@
 
         <select class="form-control" ng-model="selectedOption" ng-options="v.name for v in components ">
            
-        </select>      
+        </select> 
+       <input type="number" ng-model="articleComponents.componentamount" />     
         <button class="btn btn-lg btn-info btn-block" type="submit" data-ng-click="saveComponent()">Lägg till komponent i lista</button> 
         <table>
             <thead>
@@ -36,10 +37,10 @@
            <h2>Artiklar</h2>
            <table>
                <tr ng-repeat="article in articles">
-                   <td hidden="hidden">{{article.articleId}}</td>
+                   <td hidden="hidden">{{article.Id}}</td>
                    <td>
                        {{article.name}}
-                       <a class="glyphicon glyphicon-edit" ng-href="#/articleEdit/{{article.articleId}}"></a>
+                       <a class="glyphicon glyphicon-edit" ng-href="#/articleEdit/{{article.id}}"></a>
                    </td>
                </tr>
            </table>
