--- a/LagerHantering/AngularApp/Views/articleOutBound.html
+++ b/LagerHantering/AngularApp/Views/articleOutBound.html
@@ -13,7 +13,7 @@
 
         </select>
         <br />
-        <input type="number" ng-model="article.amount" />
+        <input type="number" min="1" ng-model="article.amount" />
         <button class="btn btn-lg btn-info btn-block" type="submit" ng-click="articleOutBounds()">Utleverans!</button>
         </div>
 </body>
