--- a/LagerHantering/AngularApp/Views/editComponent.html
+++ b/LagerHantering/AngularApp/Views/editComponent.html
@@ -30,9 +30,9 @@
             </tr>
             </tbody>
         </table>
-        angular.module('PopupDemo', ['ui.bootstrap']); 
         <button class="glyphicon glyphicon-upload" type="submit" ng-click="updateInvFunction()">Korrigera Lagersaldo</button>
         <button class="btn btn-lg btn-info btn-block" type="submit" ng-click="addComponentAmount()">Lägg tills</button>
+        <button class="glyphicon glyphicon-trash" type="submit" ng-click="deleteComponent(id)"></button>
     </div>
     <a href="#/component">Tillbaka</a>
 </body>
