Mer front end är klart

--- a/LagerHantering/AngularApp/Views/component.html
+++ b/LagerHantering/AngularApp/Views/component.html
@@ -42,8 +42,11 @@
                             </td>
                         </tr>
                     </tbody>
+
                 </table>
-                {{totalprice}}
+                <div id="TotPrice">
+                    {{totalprice}}
+                </div>
             </div>
         </div>
     </form>
