--- a/LagerHantering/AngularApp/Views/articleOutBound.html
+++ b/LagerHantering/AngularApp/Views/articleOutBound.html
@@ -5,16 +5,19 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-
+<form>
+    <div class="OutBound">
     <div id="controllerDiv" ng-controller="articleOutBoundController" ng-init="getallArticles()">
         <h1>Utleverans</h1>
-        <select name="article" class="col-lg-10" ng-model="article.id"
+        <select id="OutBoundDropDown" name="article" class="col-lg-10" ng-model="article.id"
                 ng-options="v.id as v.name for v in articles">
 
         </select>
-        <br />
-        <input type="number" min="1" ng-model="article.amount" />
+        <br/>
+        <input type="number" min="1" ng-model="article.amount"/>
         <button class="btn btn-lg btn-info btn-block" type="submit" ng-click="articleOutBounds()">Utleverans!</button>
-        </div>
+    </div>
+    </div>
+</form>
 </body>
 </html>
