--- a/LagerHantering/AngularApp/Views/editComponent.html
+++ b/LagerHantering/AngularApp/Views/editComponent.html
@@ -5,35 +5,41 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <div ng-controller="editComponentController" ng-init="editComponent()">
+    <div id="editCompWrap" ng-controller="editComponentController" ng-init="editComponent()">
         <table>
             <thead>
-            <tr>
-                <th>Artikelnummer</th>
-                <th>Namn</th>
-                <th>Ledtid</th>
-                <th>Antal</th>
-                <th>Pris</th>
-                <th>Inmatning</th>
-            </tr>
+                <tr>
+                    <th>Artikelnummer</th>
+                    <th>Namn</th>
+                    <th>Ledtid</th>
+                    <th>Antal</th>
+                    <th>Pris</th>
+                    <th>Inmatning</th>
+                </tr>
             </thead>
             <tbody>
-            <tr>
-                <td hidden="hidden">{{component.id}}</td>
-                <td>{{component.articleNumber}}</td>
-                <td>{{component.name}}</td>
-                <td>{{component.orderTime}}</td>
-                <td>{{component.amount}}</td>
-                <td>{{component.price}} </td>
-                    
-                <td><input type="number" ng-model="Update.amount" /></td>
-            </tr>
+                <tr>
+                    <td hidden="hidden">{{component.id}}</td>
+                    <td>{{component.articleNumber}}</td>
+                    <td>{{component.name}}</td>
+                    <td>{{component.orderTime}}</td>
+                    <td>{{component.amount}}</td>
+                    <td>{{component.price}} </td>
+
+                    <td><input type="number" ng-model="Update.amount" /></td>
+                </tr>
             </tbody>
         </table>
-        <button class="glyphicon glyphicon-upload" type="submit" ng-click="updateInvFunction()">Korrigera Lagersaldo</button>
-        <button class="btn btn-lg btn-info btn-block" type="submit" ng-click="addComponentAmount()">Lägg tills</button>
+        <!--<button class="btn btn-lg btn-info btn-block" type="submit" ng-click="updateInvFunction()">Korrigera Lagersaldo</button>-->
+        <button id="läggTill" class="btn btn-lg btn-info btn-block" type="submit" ng-click="addComponentAmount()">Lägg tills</button>
         <button class="glyphicon glyphicon-trash" type="submit" ng-click="deleteComponent(id)"></button>
+        <button id="KorrigeraLagersaldo" class="btn btn-lg btn-info btn-block" type="submit" ng-click="updateInvFunction()">Korrigera Lagersaldo</button>
     </div>
-    <a href="#/component">Tillbaka</a>
+
+    
+        
+
+<a href="#/component" class="btn btn-lg btn-info btn-block">Tillbaka</a>
+
 </body>
 </html>
