--- a/LagerHantering/AngularApp/Views/editArticle.html
+++ b/LagerHantering/AngularApp/Views/editArticle.html
@@ -5,30 +5,31 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-    <div ng-controller="editArticleController" ng-init="getArticle()">
-        <table border="1">
-            <thead>
-                <tr>
-                    <th>Artikel</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td hidden="hidden">{{article.Id}}</td>
-                    <td>{{article.name}}</td>
-                </tr>
-            <thead>
-                <tr>
-                    <th>Komponenter</th>
-                </tr>
-            </thead>
+    <div ng-controller="editArticleController" ng-init="getComponentsByArticle()">
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>Artikel</th>                      
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td hidden="hidden">{{article.Id}}</td>
+                        <td>{{article.name}}</td>
+                    </tr>
+                <thead>
+                    <tr>
+                        <th>Komponenter</th>
+                        <th>Antal</th>
+                    </tr>
+                </thead>
                 <tr ng-repeat="component in components">
                     <td hidden="hidden">{{component.id}}</td>
                     <td>{{component.name}}</td>
-
-                  </tr>
-        </table>
-        <button class="glyphicon glyphicon-trash" type="submit" ng-click="deleteArticle()"></button>
-        </div>
+                    <td>{{component.componentAmount}}</td>
+                </tr>
+            </table>
+            <button class="glyphicon glyphicon-trash" type="submit" ng-click="deleteArticle()"></button>
+        </div>  
 </body>
 </html>
